[FLINK-39812][table] Migrate `FlinkTypeFactory` to java